deploy-systemd-cluster/roles/post/templates/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: grafana-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: grafana.cluster
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-prometheus-grafana
          servicePort: 80
