deploy-systemd-cluster/roles/post/templates/wordpress-application.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-replica
  namespace: default
  labels:
    mysql: replica
spec:
  ports:
  - name: mysql
    port: 3306
  type: ClusterIP
  selector:
    app: mysql-replica

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-replica
  namespace: default
spec:
  serviceName: mysql-replica
  replicas: 1
  selector:
    matchLabels:
      app: mysql-replica
  template:
    metadata:
      name: mysql-replica
      labels:
        app: mysql-replica
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        lifecycle:
          postStart:
            exec:
              command:
              - bash
              - "-c"
              - |
                sleep 60
                echo "[client]" > /root/.my.cnf
                echo "user=root" >> /root/.my.cnf
                echo "password=${MYSQL_ROOT_PASSWORD}" >> /root/.my.cnf
                echo "create database application;" | mysql
                echo "grant all on application.* to 'application'@'%' identified by 'application123';" | mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi

---

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
  labels:
    php: web
spec:
  ports:
  - name: web
    port: 80
  type: ClusterIP
  selector:
    app: web

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: default
spec:
  serviceName: web
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: webserver
        image: viktor90/nginx:php5.6
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-data
          mountPath: /usr/share/nginx/html
        lifecycle:
          postStart:
            exec:
              command:
              - bash
              - "-c"
              - |
                [...]
  volumeClaimTemplates:
  - metadata:
      name: web-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-app
  namespace: default
spec:
  rules:
  - host: endava.example.site
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
